# starview

./: .gitignore  Cargo.toml  README.md  wf.keystore
.github/workflows/: release.yml
crates/starview_cli/: Cargo.toml
crates/starview_cli/src/: color.rs  error.rs  lib.rs  progress.rs
crates/starview_cli/src/subcommands/: mod.rs  patch.rs
crates/starview_cli/src/subcommands/fetch/: assets.rs  list.rs  mod.rs  path.rs
crates/starview_common/: Cargo.toml
crates/starview_common/src/: enums.rs  fs.rs  lib.rs
crates/starview_core/: Cargo.toml
crates/starview_core/src/: error.rs  lib.rs
crates/starview_core/src/cache/: models.rs
crates/starview_core/src/download/: config.rs  download.rs  downloader.rs  mod.rs  state.rs
crates/starview_core/src/fetch/: config.rs  fetch.rs  fetcher.rs  mod.rs  state.rs
crates/starview_net/: Cargo.toml
crates/starview_net/src/: api_url.rs  client.rs  crypto.rs  error.rs  headers.rs  lib.rs  models.rs
crates/starview_patch/: Cargo.toml
crates/starview_patch/src/: error.rs  ffdec.rs  lib.rs  replace.rs  script.rs
crates/starview_patch/src/apk/: aligner.rs  mod.rs  signer.rs
patches/: pinball.config.core.DevConfig.patch  pinball.config.gbits.DevConfig_gf_android.patch  pinball.scene.title.TitleScene.patch
src/: error.rs  ffdec.rs  main.rs  utils.rs
src/apk/: mod.rs  signer.rs
src/patch/: mod.rs  script.rs
