[package]
name = "starview"
version = "0.1.0"
edition = "2024"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true

[profile.dev]
opt-level = 1
debug = true
debug-assertions = true
overflow-checks = true
lto = false
incremental = true
codegen-units = 256
panic = 'unwind'

[workspace]
members = [".", "crates/*"]

[workspace.dependencies]
starview_cli = { path = "crates/starview_cli" }
starview_common = { path = "crates/starview_common" }
starview_core = { path = "crates/starview_core" }
starview_net = { path = "crates/starview_net" }
starview_patch = { path = "crates/starview_patch" }

anstyle = "1.0.11"
base64 = "0.22.1"
clap = { version = "4.5.39", features = ["derive"] }
patch = "0.7.0"
rayon = "1.10.0"
reqwest = "0.12.20"
rmp-serde = "1.3.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha1 = "0.10.6"
similar = "2.7.0"
tempfile = "3.20.0"
tokio = { version = "1.45.1", features = ["full"] }
thiserror = "2.0.12"
url = "2.5.4"
uuid = { version = "1.17.0", features = ["v4"] }
walkdir = "2.5.0"
zip = "4.0.0"
hex = "0.4.3"

[dependencies]
starview_cli.workspace = true
tokio.workspace = true
