[package]
name = "starview_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
starview_common.workspace = true
starview_core.workspace = true
starview_net.workspace = true
starview_patch.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
anstyle.workspace = true
thiserror.workspace = true
tokio.workspace = true