[package]
name = "starview_core"
edition = "2024"

[dependencies]
starview_common.workspace = true
starview_net.workspace = true
starview_patch.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-retry.workspace = true
url.workspace = true
reqwest.workspace = true
futures-util.workspace = true