[package]
name = "starview_net"
edition = "2024"

[dependencies]
starview_common.workspace = true
hex.workspace = true
reqwest.workspace = true
thiserror.workspace = true
url.workspace = true
uuid.workspace = true
rmp-serde.workspace = true
serde.workspace = true
sha1.workspace = true
base64.workspace = true
tokio.workspace = true